# all_in_one

./: CMakeLists.txt  CMakeSettings.json  README.en.md  README.md
cmake/: all_in_one.cmake  env_module.cmake
core/: CMakeLists.txt  common_macros.h  studio_macros.h
core/check/: studio_crc.cpp  studio_crc.h
core/compress/: studio_zip.cpp  studio_zip.h
core/database/otl/: otl_tools.cpp  otl_tools.h  studio_otl.cpp  studio_otl.h
core/encode/: studio_encode.cpp  studio_encode.h
core/file/: common_file.cpp  common_file.h  studio_dir.cpp  studio_dir.h  studio_file.cpp  studio_file.h
core/geometry/: studio.geo.cpp  studio.geo.h  studio_geo_algo.cpp  studio_geo_algo.h
core/json/: studio_json.cpp  studio_json.h
core/log/: studio_log.cpp  studio_log.h
core/singleton/: studio_singleton.h
core/string/: studio_format.h  studio_regex.cpp  studio_regex.h  studio_str_algo.cpp  studio_str_algo.h
core/system/: background.cpp  background.h  disk_space.cpp  disk_space.h
core/time/: common_time.h  studio_date.h  studio_posix_time.cpp  studio_posix_time.h  studio_time.h  studio_time_old.h  studio_timer.h
core/verify/: studio_crc.cpp  studio_crc.h
data/geojson/: scan_grid.geojson
data/txt/: 2003003.txt
test/: CMakeLists.txt  task_a_main.cpp  test_main.cpp
